--- a/src/app.css
+++ b/src/app.css
@@ -9,11 +9,18 @@
 
 :root {
     font-family: Arial, Helvetica, sans-serif;
-}
-
-body {
     background-color: goldenrod;
     color: rgb(83, 52, 4);
     font-size: 130%;
     font-weight: bold;
+}
+
+#app {
+    border: 1px black solid;
+    border-radius: 0.5rem;
+    width: fit-content;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 3rem;
+    margin-inline: auto;
 }
